--- a/_layouts/news_item.html
+++ b/_layouts/news_item.html
@@ -16,7 +16,7 @@ layout: news
       {{ page.date | date_to_string }}
     </span>
     <a href="/author/{{ page.author }}/" class="post-author">
-      <img src="//github.com/{{ site.author }}.png" class="avatar" width="24" height="24">
+      <img src="/img/avatar.png" class="avatar" width="24" height="24">
       {{ page.author|capitalize }}
     </a>
   </div>
