--- a/_includes/news_item.html
+++ b/_includes/news_item.html
@@ -14,7 +14,7 @@
       {{ post.date | date_to_string }}
     </span>
     <a href="/author/{{ post.author }}/" class="post-author">
-      <img src="//github.com/{{ site.author }}.png" class="avatar" width="24" height="24">
+      <img src="/img/avatar.png" class="avatar" width="24" height="24">
       {{ post.author|capitalize }}
     </a>
   </div>
