Updated logo and tweaks

--- a/_layouts/news_item.html
+++ b/_layouts/news_item.html
@@ -3,24 +3,37 @@ layout: news
 ---
 
 <article>
-  <h2>
-    {{ page.title }}
-  </h2>
-  <span class="post-category">
-    <span class="label">
-      {{ page.categories | array_to_sentence_string }}
-    </span>
-  </span>
-  <div class="post-meta">
-    <span class="post-date">
-      {{ page.date | date_to_string }}
-    </span>
-    <a href="/author/{{ page.author }}/" class="post-author">
-      <img src="/img/avatar.png" class="avatar" width="24" height="24">
-      {{ page.author|capitalize }}
-    </a>
-  </div>
-  <div class="post-content">
-    {{ content }}
-  </div>
+	<h2>{{ page.title }}</h2>
+
+	<span class="post-category">
+		<span class="label">
+			{{ page.categories | array_to_sentence_string }}
+		</span>
+	</span>
+
+	<div class="post-meta">
+		<span class="post-date">{{ page.date | date_to_string }}</span>
+		<a href="/author/{{ page.author }}/" class="post-author"><img src="/img/avatar.png" class="avatar" width="24" height="24">{{ page.author|capitalize }}</a>
+	</div>
+
+	<div class="post-content">
+		{{ content }}
+	</div>
+
+	{% if page.comments %}
+		<div id="disqus_thread"></div>
+		<script>
+			var disqus_config = function () {
+				this.page.identifier = '{{ page.url }}';
+			};
+
+			(function() {
+				var d = document, s = d.createElement('script');
+				s.src = '//xeweb.disqus.com/embed.js';
+				s.setAttribute('data-timestamp', +new Date());
+				(d.head || d.body).appendChild(s);
+			})();
+		</script>
+	{% endif %}
+
 </article>
