--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,17 @@
 <header role="banner">
-  <nav class="mobile-nav show-on-mobiles">
-    {% include primary-nav-items.html %}
-  </nav>
-  <div class="grid">
-    <div class="unit one-third center-on-mobiles">
-      <h1>
-        <a href="/">
-          <span class="sr-only">Jekyll</span>
-          <img src="/img/logo-2x.png" width="249" height="115" alt="Jekyll Logo">
-        </a>
-      </h1>
-    </div>
-    <nav class="main-nav unit two-thirds hide-on-mobiles">
-      {% include primary-nav-items.html %}
-    </nav>
-  </div>
+
+	<nav class="mobile-nav show-on-mobiles">
+		{% include primary-nav-items.html %}
+	</nav>
+
+	<div class="grid">
+		<div class="unit one-third center-on-mobiles">
+			<h1><a href="/"><img src="/img/logo.png" alt="{{ site.name }}"></a></h1>
+		</div>
+
+		<nav class="main-nav unit two-thirds hide-on-mobiles">
+			{% include primary-nav-items.html %}
+		</nav>
+	</div>
+
 </header>
