Logo increase size

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -46,9 +46,9 @@ footer {
 
 header {
 
-  h1 {
+  a {
     display: inline-block;
-    padding-top: 20px;
+    padding-top: 25px;
   }
 
   nav { display: inline-block; }
