--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
 	<div class="grid">
 		<div class="unit one-third center-on-mobiles">
-			<h1><a href="/"><img src="/img/logo.png" alt="{{ site.name }}"></a></h1>
+			<a href="/"><img src="/img/logo.png" alt="{{ site.name }}" width="225" height="70"></a>
 		</div>
 
 		<nav class="main-nav unit two-thirds hide-on-mobiles">
