Removed padding on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -54,6 +54,10 @@ header {
   nav { display: inline-block; }
 }
 
+@media (max-width: 568px) {
+  header a { padding-top: 0; }
+}
+
 nav {
 
   ul {
