--- a/_includes/news_item.html
+++ b/_includes/news_item.html
@@ -1,24 +1,23 @@
 <article>
-  <h2>
-    <a href="{{ post.url }}">
-      {{ post.title }}
-    </a>
-  </h2>
-  <span class="post-category">
-    <span class="label">
-      {{ post.categories | array_to_sentence_string }}
-    </span>
-  </span>
-  <div class="post-meta">
-    <span class="post-date">
-      {{ post.date | date_to_string }}
-    </span>
-    <a href="/author/{{ post.author }}/" class="post-author">
-      <img src="/img/avatar.png" class="avatar" width="24" height="24">
-      {{ post.author|capitalize }}
-    </a>
-  </div>
-  <div class="post-content">
-    {{ post.content }}
-  </div>
+
+	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+	<span class="post-category">
+		<span class="label">
+			{{ post.categories | array_to_sentence_string }}
+		</span>
+	</span>
+
+	<div class="post-meta">
+		<span class="post-date">{{ post.date | date_to_string }}</span>
+		<a href="/author/{{ post.author }}/" class="post-author"><img src="/img/avatar.png" class="avatar" width="24" height="24">{{ post.author|capitalize }}</a>
+	</div>
+
+	<div class="post-content">
+		{{ post.content | split:'<!--excerpt-->' | first }}
+
+		{% if post.content contains '<!--excerpt-->' %}
+			<p><a href="{{ post.url }}" class="button">Read more &raquo;</a></p>
+		{% endif %}
+	</div>
+
 </article>
