--- a/_layouts/flintstone.html
+++ b/_layouts/flintstone.html
@@ -4,6 +4,9 @@ layout: default
 
 <section class="news">
 	<div class="grid">
+
+		{% include flintstone_contents_mobile.html %}
+
 		<div class="unit four-fifths">
 			<article>
 				<h1>{{ page.title }}</h1>
