Add homepage and move to /blog

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -1,9 +1,9 @@
 <ul>
-  <li class="{% if page.section == 'home' %}current{% endif %}">
-    <a href="/">Home</a>
+  <li class="{% if page.section == 'blog' %}current{% endif %}">
+    <a href="/blog/">Blog</a>
   </li>
   <li class="{% if page.section == 'about' %}current{% endif %}">
-    <a href="/about/">About</a>
+    <a href="/blog/about/">About</a>
   </li>
   <li class="{% if page.section == 'tweet-the-tube' %}current{% endif %}">
     <a href="/tweet-the-tube/">Tweet the Tube</a>
