--- a/_includes/news_item.html
+++ b/_includes/news_item.html
@@ -9,7 +9,7 @@
 
 	<div class="post-meta">
 		<span class="post-date">{{ post.date | date_to_string }}</span>
-		<a href="/author/{{ post.author }}/" class="post-author"><img src="/img/avatar.png" class="avatar" width="24" height="24">{{ post.author|capitalize }}</a>
+		<a href="/blog/author/{{ post.author }}/" class="post-author"><img src="/img/avatar.png" class="avatar" width="24" height="24">{{ post.author|capitalize }}</a>
 	</div>
 
 	<div class="post-content">
