--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#companies">Previous Companies</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#help">Ways I Can Help</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/blog/">Blog</a></li>
                     </ul>
                 </div>
@@ -54,9 +56,10 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Contact</h4>
                         <p class="lead mb-0">
-                            London, UK
+                            <a href="mailto:jason@xeweb.net">jason@xeweb.net</a><br>
+                            Based in London, UK
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
