--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>XEWeb</title>
+        <title>London based Startup Advisor - Fractional CTO - Software Engineer</title>
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -45,7 +45,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Tech Advisor - Fractional CTO - Founder</p>
+                <p class="masthead-subheading font-weight-light mb-0">Tech Advisor - Fractional CTO - Engineer</p>
             </div>
         </header>
 
