--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="/img/me.png" alt="Jason Margolin" />
+                <img class="masthead-avatar mb-5" src="/img/me.jpg" alt="Jason Margolin" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Jason Margolin</h1>
                 <!-- Icon Divider-->
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Contact</h4>
                         <p class="lead mb-0">
                             <a href="mailto:jason@xeweb.net">jason@xeweb.net</a><br>
@@ -64,19 +64,12 @@
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/jasonmargolin/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/jas_m" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/fire015" target="_blank"><i class="fab fa-fw fa-github"></i></a>
-                    </div>
-                    <!-- Footer About Text-->
-                    <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">Team XYZ</h4>
-                        <p class="lead mb-0">
-                            I also run a technology consultancy firm exclusively staffed by former Facebook employees at <a href="https://teamxyz.co/">teamxyz.co</a>
-                        </p>
-                    </div>
+                    </div>                    
                 </div>
             </div>
         </footer>
